tip_calculator/styles_unminified.css
* {
  /* Hack to disable Chrome font boosting. Causes Chrome to enlarge the output unnecessarily. */
  max-height:1000000px;
  transition: 1s;
}

body {
  font-family: "open sans", Verdana, arial, sans-serif;
  background-color: #F0F0F0;
  max-width: 70rem;
  margin: 0px;
  margin-left: auto;
  margin-right: auto;
}

h3 {
  font-size: 1.3rem;
  padding: 0.4rem;
  margin: 0px;
  background-color: #003FD1;
  color: #FFFFFF;
  font-weight: normal;
  vertical-align: top;
}

.unitPriceComparisonIcon {
  height: 1.5em;
  margin-right: 0.5rem;
  vertical-align: middle;
}

.contentCard {
  background-color: #FFFFFF;
  display: block;
  height: auto;
  width: 95%;
  margin: 0.6rem;
  padding: 0.1rem;
  background-color: #FFFFFF;
  box-shadow: 0px 0px 10px #000000;
  position: relative; /* had to do this so buttons could be positioned absolute to this div */
}

p {
  font-size: 1.2rem;
  margin: 0.5em;
}

#dollarSignSpan {
  position: relative;
  left:0.6em;
}

#billAmount {
  text-align: center;
}

#tipPercent {
  text-align: center;
}

#tipPercentAfter {
  font-size:0.9em
}

.amountAndPercent {
  white-space: nowrap;
}

input[type=number] {
  margin-bottom: 0.4em;
  font-size: 1em;
  width:5.2em;
  border: 1px solid;
}

input[type="button"] {
  padding: 0.6rem;
  margin-top: 0.3em;
  margin-bottom: 0.3em;
}

